optimized gettig pvz info
